08-http-traffic-authorization/allow-self.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-self
 namespace: default
spec:
 action: ALLOW
 rules:
 - from:
   - source:
       namespaces: ["default"]
